# Local-guide-chatbot

./: .gitignore  Dockerfile  README.md  pyproject.toml  rwanda_qa_cleaned.csv  rwanda_qa_comprehensive.csv
api/: clean_data.py  main.py  pipeline.py  scrape.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css
frontend/src/components/: AppSidebar.tsx  ChatArea.tsx
frontend/src/pages/: Index.tsx
notebook/: LocalGuideModel.ipynb
scripts/: dataset_generator.py  preprocessing.py  trainer.py
